syntax = "proto3";

package j2cl;

option java_multiple_files = true;
option java_package = "com.google.j2cl.libraryinfo";

message LibraryInfo {
  repeated TypeInfo type = 1;
}

message TypeInfo {
  string type_id = 1;
  string extends_type = 2;
  bool js_instantiable = 3;
  repeated string implements_type = 4;
  repeated MemberInfo member = 5;
  string header_source_file_path = 6;
  string impl_source_file_path = 7;
}

message MemberInfo {
  string name = 1;
  bool public = 2;
  bool static = 3;
  bool js_accessible = 4;
  repeated MethodInvocation invoked_methods = 5;
  repeated string referenced_types = 6;
  SourcePosition start_position = 7;
  SourcePosition end_position = 8;
}

enum InvocationKind {
  DYNAMIC = 0;
  STATIC = 1;
  INSTANTIATION = 2;
}

message MethodInvocation {
  string method = 1;
  string enclosing_type = 2;
  InvocationKind kind = 3;
}

message SourcePosition {
  int32 line = 1;
  int32 column = 2;
}
